@@ -4,7 +4,9 @@ Changelog for plone.i18n
 
 plone.i18n - 1.0.5 Unreleased
 
-
+    - Added '`' to the list of dangerous chars, which will be removed by the
+      url and be replaced with a dash by the file name normalizer now.
+      [hannosch, mj]
 
 plone.i18n - 1.0.4 Released April 19, 2008
 
